# my_learnings

./: .gitignore  README.md
cpp/book_templates/: CMakeLists.txt  Readme.md
cpp/book_templates/chapter_1/: CMakeLists.txt  exercises.md
cpp/book_templates/chapter_1/hw_1/: CMakeLists.txt  main.cpp  max_utils.hpp
cpp/book_templates/chapter_1/hw_2/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_1/hw_3/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_1/pp_1/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_1/pp_2/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_1/pp_3/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_1/pp_4/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_1/pp_5/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/: CMakeLists.txt  exercises.md
cpp/book_templates/chapter_2/hw_1/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/hw_2/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/hw_3/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/pp_1/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/pp_2/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/pp_3/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/pp_4/: CMakeLists.txt  main.cpp
cpp/book_templates/chapter_2/pp_5/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/: CMakeLists.txt
cpp/guidelines/website_cpp_core_guidelines/interfaces/: CMakeLists.txt
cpp/guidelines/website_cpp_core_guidelines/interfaces/i1_make_interfaces_explicit/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/: CMakeLists.txt
cpp/guidelines/website_cpp_core_guidelines/philosophy/P1_express_ideas_directly_in_code/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p11_encapsulate_messy_constructs/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p3_express_intent/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p4_type_safe_program/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p5_compile_time_checking/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p6_run_time_checks/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p7_catch_run_time_errors_early/: CMakeLists.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p8_dont_leak_resources/: CMakeLists.txt  example.txt  main.cpp
cpp/guidelines/website_cpp_core_guidelines/philosophy/p9_dont_waste/: CMakeLists.txt  main.cpp
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/Item1_template_type_deduction/: CMakeLists.txt
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/Item4_check_deduced_types/: CMakeLists.txt  main.cpp
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/code/: CMakeLists.txt
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/code/helper_lib/: CMakeLists.txt  helper_lib.hpp
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/code/item1_template_type_deduction/: main.cpp
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/code/item3_understand_decltype/: CMakeLists.txt
cpp/modern_cpp/book_effective_modern_cpp_scott_meyers/code/item4_check_deduced_types/: CMakeLists.txt
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/: CMakeLists.txt
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/ex1_launching_a_thread/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/ex2_data_races/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/ex3_livelock/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/ex4_cond_variables/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/ex5_double_checked_atomic/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/ex6_future_promises/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec14_starting_threads/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec15_threads_with_arguments/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec20_system_thread_interface/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec21_cpp_thread_class/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec22_managing_thread/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec23_multiple_threads/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec24_data_race/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec28_mutex_class/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec29_synchronized_class/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec30_lock_guard/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec31_unique_lock/: CMakeLists.txt  main.cpp
cpp/modern_cpp/course_learn_multithreading_with_modern_cpp/code/lec32_mutex_timeouts/: CMakeLists.txt  main.cpp
operating_system/course_fundamentals_of_operating_system/code/: CMakeLists.txt
operating_system/course_fundamentals_of_operating_system/code/15_process_section_demo/: CMakeLists.txt
operating_system/course_fundamentals_of_operating_system/code/26_inside_the_cpu_demo/: CMakeLists.txt
operating_system/course_fundamentals_of_operating_system/code/31_demo_process_management/: main.c
operating_system/course_fundamentals_of_operating_system/code/44_socket_management_demo/: CMakeLists.txt
operating_system_and_hardware/book_computer_systems/homework problems/Chapter_2/: CMakeLists.txt
(+859 files in other folders)
