cmake_minimum_required(VERSION 3.16)

project(course_fundamentals_of_operating_system LANGUAGES C)

add_subdirectory(15_process_section_demo)
add_subdirectory(21_memory_section_demo)
add_subdirectory(26_inside_the_cpu_demo)
add_subdirectory(31_demo_process_management)
add_subdirectory(44_socket_management_demo)
