add_subdirectory(p1_express_ideas_directly_in_code)
add_subdirectory(p3_express_intent)
add_subdirectory(p4_type_safe_program)
add_subdirectory(p5_compile_time_checking)
add_subdirectory(p6_run_time_checks)
add_subdirectory(p7_catch_run_time_errors_early)
add_subdirectory(p8_dont_leak_resources)
add_subdirectory(p9_dont_waste)
add_subdirectory(p11_encapsulate_messy_constructs)
