cmake_minimum_required(VERSION 3.16)

project(course_learn_multithreading_with_modern_cpp LANGUAGES C)

add_subdirectory(ex1_launching_a_thread)
add_subdirectory(ex2_data_races)
add_subdirectory(ex3_livelock)
add_subdirectory(ex4_cond_variables)
add_subdirectory(ex5_double_checked_atomic)
add_subdirectory(ex6_future_promises)
add_subdirectory(lec14_starting_threads)
add_subdirectory(lec15_threads_with_arguments)
add_subdirectory(lec20_system_thread_interface)
add_subdirectory(lec21_cpp_thread_class)
add_subdirectory(lec22_managing_thread)
add_subdirectory(lec23_multiple_threads)
add_subdirectory(lec24_data_race)
add_subdirectory(lec28_mutex_class)
add_subdirectory(lec29_synchronized_class)
add_subdirectory(lec30_lock_guard)
add_subdirectory(lec31_unique_lock)
add_subdirectory(lec32_mutex_timeouts)
add_subdirectory(lec33_multiple_reader_writer)
add_subdirectory(lec34_shared_mutex)
add_subdirectory(lec35_shared_data_init)
add_subdirectory(lec36_thread_local)
add_subdirectory(lec38_double_checked_locking)
add_subdirectory(lec39_deadlock)
add_subdirectory(lec41_deadlock_avoidance)
add_subdirectory(lec43_livelock)
add_subdirectory(lec47_thread_coordination)
add_subdirectory(lec48_condition_variable)
add_subdirectory(lec49_cond_with_pred)
add_subdirectory(lec50_cond_var_pract)
add_subdirectory(lec53_future_promises)
add_subdirectory(lec54_future_multiple_consumers)
add_subdirectory(lec55_atomic_type)
add_subdirectory(lec56_atomic_type_2)
add_subdirectory(lec57_atomic_operations)
add_subdirectory(lec61_lockfree_practical)
add_subdirectory(lec63_packaged_task)
add_subdirectory(lec64_async_func)
add_subdirectory(lec65_async_func_flags)
add_subdirectory(lec71_execution_policies)
add_subdirectory(lec72_exceptions_parallel)
add_subdirectory(lec73_std_algorithms)
add_subdirectory(lec74_transform_and_reduce)
add_subdirectory(lec75_transform_reduce_practical)
add_subdirectory(lec77_data_structures)
add_subdirectory(lec78_shared_pointer)
add_subdirectory(lec79_monitor_class)
add_subdirectory(lec80_generic_monitor_class)
add_subdirectory(lec81_semaphore)
add_subdirectory(lec82_concurrent_queue)
add_subdirectory(lec83_cq_with_condition_variable)
add_subdirectory(lec85_threadpool)
