cmake_minimum_required(VERSION 3.25)

project(chapter2 LANGUAGES C)

add_subdirectory(2.55)
add_subdirectory(2.56)
add_subdirectory(2.57)
add_subdirectory(2.58)
add_subdirectory(2.59)
add_subdirectory(2.60)
add_subdirectory(2.61)
add_subdirectory(2.62)
add_subdirectory(2.63)
add_subdirectory(2.64)
add_subdirectory(2.65)
add_subdirectory(2.66)
add_subdirectory(2.67)